# occam-api

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
.cargo/: audit.toml
.github/workflows/: ci.yml
.sqlx/: query-a81d701c30cd35a3b50f708e2ae3503d6a1f1a96f13f589ac3721907fdaf7d80.json  query-b648d73b8d3b8317aab52c41beff34ec2e77644ae3772149b2b84fd91ef833dc.json
migrations/: 001_create_availability_schema.sql  002_seed_streaming_services.sql  003_add_watchmode_service_ids.sql
src/: config.rs  error.rs  main.rs
src/api/: handlers.rs  mod.rs  routes.rs  state.rs
src/db/: cache.rs  mod.rs  postgres.rs
src/db/redis/: cache.rs  macros.rs  mod.rs
src/middleware/: request_id.rs
src/models/: mod.rs  streaming_service.rs  title.rs  user_preferences.rs
src/routes/: mod.rs  optimize.rs  recommendations.rs  titles.rs
src/services/: availability.rs  mod.rs  optimization.rs  optimizer.rs  recommendations.rs  title_search.rs
src/services/providers/: mod.rs  streaming_availability.rs  watchmode.rs
tests/: api_tests.rs
