[package]
name = "occam-api"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database & Caching
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "macros", "migrate", "bigdecimal"] }
redis = { version = "0.26", features = ["tokio-comp", "connection-manager"] }

# HTTP Client
reqwest = { version = "0.12", features = ["json"] }

# Optimization solver (pure Rust - no system dependencies)
good_lp = { version = "1.8", features = ["microlp"], default-features = false }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Configuration & Environment
dotenvy = "0.15"
envy = "0.4"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.11", features = ["v4", "serde"] }

# Async traits
async-trait = "0.1"
chrono = { version = "0.4.42", features = ["serde"] }

[dev-dependencies]
mockall = "0.13"
tokio-test = "0.4"
